# MWT

./: .gitignore  README.md
.github/workflows/: deploy-admin-api-lambda.yml  deploy-public-api-lambda.yml
backend/: Cargo.toml  README.md
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: auth.rs  lib.rs  problem.rs  submission.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: aws_repository.rs  dynamodb_item.rs  dynamodb_keys.rs  lib.rs  memory.rs  repository.rs  s3_location.rs
backend/functions/admin-api/: Cargo.toml
backend/functions/admin-api/src/: lib.rs  main.rs
backend/functions/public-api/: Cargo.toml
backend/functions/public-api/src/: lib.rs  main.rs
backend/functions/submission-consumer/: Cargo.toml
backend/functions/submission-consumer/src/: main.rs
backend/scripts/: package-admin-api.sh  package-public-api.sh
docs/.obsidian/: workspace.json
docs/00 Hub/: MWT Dataview 대시보드.md  MWT 마스터 인덱스.md
docs/10 Architecture/: mwt-architecture-v1.3.md  mwt-cost-down-v1.1.md  mwt-problem-storage-and-staging-v1.1.md
docs/20 Execution/: mwt-execution-plan-v1.2.md
docs/30 Judge Runtime/: mwt-fargate-sandbox-runner-v1.1.md
docs/40 Problem/: statement.md
docs/90 References/: 📋 IOI 체크리스트 (번역본).md
frontend/: .env.example  README.md  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.vue
infra/dynamodb/: README.md  core-table.yaml
infra/iam/: README.md  github-actions-api-deploy-policy.json  github-actions-public-api-deploy-policy.json
infra/s3/: README.md  problem-assets.yaml
(+27 files in other folders)
