[workspace]
members = [
  "crates/domain",
  "crates/infra",
  "functions/admin-api",
  "functions/public-api",
  "functions/submission-consumer",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
aws-config = "1.5.16"
aws-sdk-dynamodb = "1.59.0"
aws-sdk-s3 = "1.70.0"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
