[package]
name = "mwt-infra"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true
mwt-domain = { path = "../domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
