[package]
name = "mwt-public-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true
lambda_http.workspace = true
mwt-domain = { path = "../../crates/domain" }
mwt-infra = { path = "../../crates/infra" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
